--- a/taxi_demand_predictor/notebooks/02_transform_data_to_ts_data.ipynb
+++ b/taxi_demand_predictor/notebooks/02_transform_data_to_ts_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "9 2022-01-01 00:48:52                 236"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "9 2022-01-01 00:48:52                 236  2022-01-01"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "39                   1 2022-01-04 15:00:00      1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,21 +599,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/257 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 257/257 [00:00<00:00, 296.37it/s]\n"
+      "100%|██████████| 257/257 [00:01<00:00, 147.58it/s]\n"
      ]
     }
    ],
@@ -623,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2242,9 +2235,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi_demand_predictor_venv",
+   "display_name": "taxi_demand_predictor",
    "language": "python",
-   "name": "taxi_demand_predictor_venv"
+   "name": "taxi_demand_predictor"
   },
   "language_info": {
    "codemirror_mode": {
