--- a/taxi_demand_predictor/notebooks/11_backfill_feature_store.ipynb
+++ b/taxi_demand_predictor/notebooks/11_backfill_feature_store.ipynb
@@ -144,7 +144,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 265/265 [00:13<00:00, 20.33it/s]\n"
+      "100%|██████████| 265/265 [00:14<00:00, 18.35it/s]\n"
      ]
     }
    ],
@@ -194,9 +194,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-07-04 23:52:43,537 WARNING: DeprecationWarning: The 'warn' method is deprecated, use 'warning' instead\n",
+      "2024-07-07 17:06:28,400 WARNING: DeprecationWarning: The 'warn' method is deprecated, use 'warning' instead\n",
       "\n",
-      "2024-07-04 23:52:43,538 WARNING: using legacy validation callback\n",
+      "2024-07-07 17:06:28,401 WARNING: using legacy validation callback\n",
       "Connected. Call `.close()` to terminate connection gracefully.\n"
      ]
     }
@@ -238,7 +238,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70e2f12a7ccc4bc19de49477e0b2eb9b",
+       "model_id": "47bdbc2c3b8f46eab0e8832cb75ea63e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x2cb4f0834a0>, None)"
+       "(<hsfs.core.job.Job at 0x1dc9e29ff20>, None)"
       ]
      },
      "execution_count": 12,
@@ -283,9 +283,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi_demand_predictor_venv",
+   "display_name": "taxi_demand_predictor",
    "language": "python",
-   "name": "taxi_demand_predictor_venv"
+   "name": "taxi_demand_predictor"
   },
   "language_info": {
    "codemirror_mode": {
