--- a/taxi_demand_predictor/notebooks/12_feature_pipeline.ipynb
+++ b/taxi_demand_predictor/notebooks/12_feature_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,21 +28,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date=Timestamp('2024-07-04 22:00:00')\n"
+      "current_date=Timestamp('2024-07-07 15:00:00')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_15848\\1103268557.py:5: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_2284\\1103268557.py:5: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
       "  current_date = pd.to_datetime(datetime.utcnow()).floor('H')\n"
      ]
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "from_date=Timestamp('2024-06-06 22:00:00'), to_date_=Timestamp('2023-07-06 22:00:00')\n",
+      "from_date=Timestamp('2024-06-09 15:00:00'), to_date_=Timestamp('2023-07-09 15:00:00')\n",
       "File 2023-06 was already in local storage\n",
       "File 2023-07 was already in local storage\n"
      ]
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 265/265 [00:00<00:00, 268.38it/s]\n"
+      "100%|██████████| 265/265 [00:01<00:00, 264.27it/s]\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,9 +142,9 @@
       "Connected. Call `.close()` to terminate connection gracefully.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/840852\n",
-      "2024-07-05 00:02:26,611 WARNING: DeprecationWarning: The 'warn' method is deprecated, use 'warning' instead\n",
+      "2024-07-07 17:24:39,345 WARNING: DeprecationWarning: The 'warn' method is deprecated, use 'warning' instead\n",
       "\n",
-      "2024-07-05 00:02:26,612 WARNING: using legacy validation callback\n",
+      "2024-07-07 17:24:39,346 WARNING: using legacy validation callback\n",
       "Connected. Call `.close()` to terminate connection gracefully.\n"
      ]
     }
@@ -173,13 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3576f69c770449fcbe061bb03197de97",
+       "model_id": "c4be4d1a233b433f9c26f6dca9963c9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,10 +202,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x21a198fe2d0>, None)"
+       "(<hsfs.core.job.Job at 0x23570286ed0>, None)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,9 +224,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi_demand_predictor_venv",
+   "display_name": "taxi_demand_predictor",
    "language": "python",
-   "name": "taxi_demand_predictor_venv"
+   "name": "taxi_demand_predictor"
   },
   "language_info": {
    "codemirror_mode": {
