--- a/taxi_demand_predictor/notebooks/14_inference_pipeline.ipynb
+++ b/taxi_demand_predictor/notebooks/14_inference_pipeline.ipynb
@@ -35,14 +35,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date=Timestamp('2024-07-10 16:00:00')\n"
+      "current_date=Timestamp('2024-07-10 21:00:00')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_8296\\842599459.py:4: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_16488\\842599459.py:4: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
       "  current_date = pd.to_datetime(datetime.utcnow()).floor('H') # - timedelta(hours=1)\n"
      ]
     }
@@ -57,20 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connection closed.\n",
       "Connected. Call `.close()` to terminate connection gracefully.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/840852\n",
+      "2024-07-10 23:32:19,201 WARNING: DeprecationWarning: The 'warn' method is deprecated, use 'warning' instead\n",
+      "\n",
+      "2024-07-10 23:32:19,201 WARNING: using legacy validation callback\n",
       "Connected. Call `.close()` to terminate connection gracefully.\n",
-      "fetching data from 2024-06-12 16:00:00+00:00 to 2024-07-10 15:00:00+00:00\n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (10.13s) \n"
+      "fetching data from 2024-06-12 21:00:00+00:00 to 2024-07-10 20:00:00+00:00\n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (17.25s) \n"
      ]
     }
    ],
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,8 +96,8 @@
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/840852\n",
       "Connected. Call `.close()` to terminate connection gracefully.\n",
-      "[LightGBM] [Warning] feature_fraction is set=0.671959275403464, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.671959275403464\n",
-      "[LightGBM] [Warning] bagging_fraction is set=0.5852917501207565, subsample=1.0 will be ignored. Current value: bagging_fraction=0.5852917501207565\n"
+      "[LightGBM] [Warning] feature_fraction is set=0.866100376126804, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.866100376126804\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.5951041299254337, subsample=1.0 will be ignored. Current value: bagging_fraction=0.5951041299254337\n"
      ]
     }
    ],
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -144,32 +146,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -180,32 +182,32 @@
        "    <tr>\n",
        "      <th>260</th>\n",
        "      <td>261</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>261</th>\n",
        "      <td>262</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>262</th>\n",
        "      <td>263</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>263</th>\n",
        "      <td>264</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>264</th>\n",
        "      <td>265</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-07-10 16:00:00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2024-07-10 21:00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -214,22 +216,22 @@
       ],
       "text/plain": [
        "     pickup_location_id  predicted_demand         pickup_hour\n",
-       "0                     1               5.0 2024-07-10 16:00:00\n",
-       "1                     2               7.0 2024-07-10 16:00:00\n",
-       "2                     3              12.0 2024-07-10 16:00:00\n",
-       "3                     4              15.0 2024-07-10 16:00:00\n",
-       "4                     5               6.0 2024-07-10 16:00:00\n",
+       "0                     1               9.0 2024-07-10 21:00:00\n",
+       "1                     2               6.0 2024-07-10 21:00:00\n",
+       "2                     3               6.0 2024-07-10 21:00:00\n",
+       "3                     4               9.0 2024-07-10 21:00:00\n",
+       "4                     5               6.0 2024-07-10 21:00:00\n",
        "..                  ...               ...                 ...\n",
-       "260                 261               7.0 2024-07-10 16:00:00\n",
-       "261                 262               6.0 2024-07-10 16:00:00\n",
-       "262                 263               4.0 2024-07-10 16:00:00\n",
-       "263                 264              15.0 2024-07-10 16:00:00\n",
-       "264                 265               5.0 2024-07-10 16:00:00\n",
+       "260                 261               3.0 2024-07-10 21:00:00\n",
+       "261                 262               6.0 2024-07-10 21:00:00\n",
+       "262                 263               3.0 2024-07-10 21:00:00\n",
+       "263                 264               4.0 2024-07-10 21:00:00\n",
+       "264                 265               2.0 2024-07-10 21:00:00\n",
        "\n",
        "[265 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,13 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52569176c2b2403b8f67ded665badb43",
+       "model_id": "98aae0c3fd0c4c948fe5de0928498949",
        "version_major": 2,
        "version_minor": 0
       },
@@ -301,10 +303,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x254806768a0>, None)"
+       "(<hsfs.core.job.Job at 0x23983ab16a0>, None)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
